In progress: Layout Menu FIREBASE DIALOG
Done:
Gradle settings + Manifest
include binding
API
DATABASE
NAV GRAPH

--- a/app/src/main/res/layout/profil_edit.xml
+++ b/app/src/main/res/layout/profil_edit.xml
@@ -72,7 +72,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/editPwBTN" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/signUpPwSecLayout"
+                    android:id="@+id/pwReset"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="26dp"
