--- a/app/src/main/res/layout/profil_edit.xml
+++ b/app/src/main/res/layout/profil_edit.xml
@@ -23,15 +23,6 @@
                 android:layout_height="wrap_content"
                 android:padding="24dp">
 
-                <ImageView
-                    android:id="@+id/editPbIV"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/ic_launcher_background"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <Button
                     android:id="@+id/editPbBTN"
                     android:layout_width="300dp"
@@ -75,7 +66,6 @@
                     android:id="@+id/pwReset"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="26dp"
                     android:layout_marginBottom="26dp"
                     android:ems="10"
                     android:hint="Username"
@@ -83,7 +73,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/editPbBTN"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editPbIV">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/usernameET"
