--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,23 +12,25 @@
         android:layout_height="wrap_content">
 
 
-
         <ImageView
             android:id="@+id/detailThumbIV"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:src="@drawable/ic_launcher_background"
             android:scaleType="fitXY"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/detailPlayNowBTN"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Button"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:text="PLAY NOW"
+            app:layout_constraintEnd_toStartOf="@+id/detailShareBTN"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailThumbIV" />
 
@@ -226,6 +228,18 @@
             app:layout_constraintBottom_toBottomOf="@+id/detailScreen3IV"
             app:layout_constraintStart_toEndOf="@+id/detailScreen3IV"
             app:layout_constraintTop_toTopOf="@+id/detailScreen3IV" />
+
+        <Button
+            android:id="@+id/detailShareBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:text="Share"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/detailPlayNowBTN"
+            app:layout_constraintTop_toBottomOf="@+id/detailThumbIV" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
