--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,16 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".ui.HomeFragment" >
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/homeRV"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshSwipe"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeFilterSPN"
-        tools:listitem="@layout/game_list_item" />
+        app:layout_constraintTop_toBottomOf="@+id/homeSV"
+        tools:context=".MainActivity">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/homeRV"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/homeFilterSPN"
+            tools:listitem="@layout/game_list_item" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <SearchView
         android:id="@+id/homeSV"
