--- a/app/src/main/res/layout/profil_edit.xml
+++ b/app/src/main/res/layout/profil_edit.xml
@@ -62,7 +62,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/editPwBTN" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/pwReset"
+                    android:id="@+id/messageET"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="26dp"
