--- a/app/src/main/res/layout/reset_pw.xml
+++ b/app/src/main/res/layout/reset_pw.xml
@@ -29,12 +29,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Reset password"
-                    app:layout_constraintEnd_toEndOf="@+id/pwReset"
-                    app:layout_constraintStart_toStartOf="@+id/pwReset"
-                    app:layout_constraintTop_toBottomOf="@+id/pwReset" />
+                    app:layout_constraintEnd_toEndOf="@+id/messageET"
+                    app:layout_constraintStart_toStartOf="@+id/messageET"
+                    app:layout_constraintTop_toBottomOf="@+id/messageET" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/pwReset"
+                    android:id="@+id/messageET"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="26dp"
