--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,4 +72,16 @@
         app:layout_constraintStart_toEndOf="@+id/homeFilterTV"
         app:layout_constraintTop_toTopOf="@+id/homeFilterTV" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/upFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:clickable="true"
+        android:backgroundTint="@color/common_google_signin_btn_text_light_default"
+        android:src="@drawable/scroll_up"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
