--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -246,7 +246,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="TextView"
+            android:text="Comments"
             app:layout_constraintStart_toStartOf="@+id/detailScreenshotsTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailScreen3IV" />
 
@@ -263,19 +263,6 @@
             app:layout_constraintTop_toBottomOf="@+id/commentTitleTV"
             app:spanCount="3" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/messageET"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="26dp"
-            android:ems="10"
-            android:hint="Username"
-            app:endIconMode="clear_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/usernameET"
